--- a/rapportDatumtexter.json
+++ b/rapportDatumtexter.json
@@ -1,86 +1,86 @@
 [
  {
-   "datum": "15/10/2021",
-   "Text": "Fastighetspremiär. I det spretigt värderade fastighetsuniversumet är det trots den senaste tiden kursnedgångar rikligt med rekordhöga värderingar över substansen. Men det finns också många bolag som värderas under och först ut att försöka skaka liv i värderingen och begrava hotet om butikernas och kontorens snara död i det helt öppnade Sverige är Atrium Ljungberg. "
+   "datum": "13/04/2022",
+   "Text": "Fokus på kontorsråttorna. Efter ett par vinstvarningar, H&M:s resultatmiss, Creades substansbesvikelse och Industrivärdens gäspiga investmentbolagsrapport vevar Atrium Ljungberg i gång rapportfloden. I den nya världen med stigande räntor har placerarna flytt de högst värderade fastighetsbolagen. Atrium Ljungberg och bolagets rabattvärderade kontorsuthyrarkolleger som Corem, Castellum, Fabege och Fastpartner har klarat sig bättre på börsen när hemarbetsskräcken minskat. Håller den trenden i sig?"
  },
  {
-   "datum": "18/10/2021",
-   "Text": "Tung trio. En högintressant trio kickar i gång rapportperioden på allvar. Det är Wallenbergarnas maktbolag Investor, börsens mäktigaste bolag, men framför allt Sandvik. Hittills har vd:n Stefan Widing fått uselt betalt för sina förvärv och nya inriktning mot industriell mjukvara. Nu får han en ny chans med att sjösätta stålavknoppningen SMT och som först i verkstan lugna alla som oroas av fordonsefterfrågan, flaskhalsar, komponentbrist och råvaruinflation och otillräckliga prishöjningar. Inför Avanza vet vi redan att nätsparbanken fått fler kunder, spararnas kapital vuxit men också att inflödena och courtagen minskat jämfört med det andra kvartalet. Signalerar det att också storbankernas provisioner inte kommer att slå alla med häpnad som senast?"
+   "datum": "14/04/2024",
+   "Text": "Häxkittel. Skärtorsdag. Sedan bokslutsfesten har Ericsson och vd:n Börje Ekholm förvandlats från omdaningshjälte, marginalhöjare, rapportskrällare och 5g-ledare till börsens häxa. I telekomutrustarens kittel bubblar den dolda utredningen om möjliga IS-mutor, det brutna förlikningsavtalet med USA:s justitiedepartement, risken för nya miljardböter, fiaskotajmningen för köpet av Vonage och oron för att USA-operatörernas investeringar toppat. Aktien är värderad för en flygtur till Blåkulla. Fixar Börje Ekholm att styra den till något angenämare plats? Komplettera med HMS för ledtrådar kring industrins digitalisering, investeringsvilja och komponentbrist."
  },
  {
-   "datum": "19/10/2021",
-   "Text": "Glödhett. Telekom- och fastighetsdag kryddad med kylgrossisten Beijer Ref. Bjuder kassastinna Ericsson på några nya grepp efter rapportfloppen senast för att blidka placerare som svängt från att älska bolaget för nätverksaffärens framgångar inom 5g till att vrakvärdera det för oförmågan att vända den eviga förlusthärden datatjänster? Syna även rapportflodens teleoperatör nummer ett, Tele2, och bolagets prishöjningar, tillväxtinitiativ och utdelningsbesked efter avyttringen av Hollandsaffären. Och vad blir det för valör på fyrtalet fastighetsrapporter?"
+   "datum": "19/04/2022",
+   "Text": "Fastighetsaktierna del två. Påskfirandet är över, men ännu är det sparsmakat med rapporter. Ett undantag är premievärderade Nyfosa som berättar hur det gått på fastighetsbolagets mindre tillväxtorter och knutpunkter för transporter."
  },
  {
-   "datum": "20/10/2021",
-   "Text": "Finansfest? Den bästa och näst sämsta bankaktien det senaste året, SEB och SHB visar om det blir en repris av förra kvartalets resultatkross eller om förväntningarna kommit ikapp i miljön med svagare börs, stigande fastighetsvärden, högre räntor och bättre konjunktur. På menyn finns också utdelningsbesked och kanske tal om stigande it-kostnader och ny bankskatt. Och hur svårsmält blir EQT:s magra rapport? Riskkapitalbolagets matigare halvårsvariant skickade upp börsvärdet med 48 miljarder kronor men nu måste förtroendet återvinnas efter insiders miljardrundning av inlåsningsregler och FI:s insiderutredning. Missa inte heller “nya” Kinnevik där den luftiga substanspremien krympt, det första skogsbolaget Stora Enso och pandemivinnaren Getinge."
+   "datum": "20/04/2022",
+   "Text": "Verkstans vägvisare. Trots normalt skrällfria rapporter från Sandviks vd Stefan Widing sätter bolagets tidigt cykliska skär, servicetunga gruvutrustning och avknoppningsaktuella stål tonen för verkstad och börs. Hur mycket har den starka efterfrågan hunnit försvagas, Sandvik hunnit höja priserna, kostnaderna för råvara, energi och logistik hunnit stiga och igenkorkningen av leverantörskedjorna och komponentbristen hunnit förvärras ytterligare efter att Ryssland invaderade Ukraina? Eller har den svaga kronan hållit uppe marginalerna som var en av få svaga punkter i verkstadsboksluten?"
  },
  {
-   "datum": "21/10/2021",
-   "Text": "Supertorsdag. Tatuera in datumet för rapportflodens tyngsta dag. Efter verkstadskavalkaden från Atlas Copco, Volvo, Epiroc och ABB vet vi allt om det oväntat stora orderfyrverkeriet senast hållit i sig och hur produktions- och leveransstöket slagit mot försäljning och rekordmarginaler. Andra vågens storbanksrapporter ger status och utdelningsbesked från framgångssurfande Nordea och rapportsänket Swedbank. Missa inte heller eventuella Teliasignaler kring fler utförsäljningar av operatörens 25 000 master för att finansiera ökade investeringar i 5g, fiber och digitalisering. Och lyckas trion Axfood, Intrum och Mycronic sätta blankarna på plats?"
+   "datum": "21/04/2022",
+   "Text": "Första kraftprovet. Börsens värdefullaste svensk, Wallenbergarnas maktbolag Investor, Kinnevik som kurskraschade senast och premievärderade Bure bjuder på nya insikter kring investmentbolagen. Sencykliska ABB serverar andra akten i verkstadsdramat och vd:n Björn Rosengren avslöjar om det första kvartalet blev så stabilt som han trodde senast och om 2022-prognoserna om gradvis marginalförbättring och marknadstillväxt håller. Och har dagligvaruhandlaren Axfood och teleoperatören Tele2 de defensiva kvaliteter som placerarna räknat med när de höjt aktierna till skyarna i år?"
  },
  {
-   "datum": "22/10/2021",
-   "Text": "Snart helg. Men håll ut när veckan avslutas med hygien- och medicinteknikbolaget Essity, pressad av stigande kostnader för massa, olja, energi och transporter och inte minst en serie dramatiska dueller. I skogen är det match mellan Holmen och Billerud Korsnäs. I fritidsproduktklassen möter kursraketen och festfixaren Thule wannaben Dometic men med tristare rapportfacit och stort förvärvssug. Det är förvärvsfantomen Lifco mot investmentbolaget Ratos som rest sig på nio. Autoliv, leverantören av säkerhet till den hackande bilindustrin går upp mot leverantören av gummiblandningar Hexpol och så har vi fastighetsfighten mellan Wallenstam och Wihlborgs. "
+   "datum": "22/04/2022",
+   "Text": "Fordonsdans utan neon. Biltillverkarna fortsätter att kämpa, inte med efterfrågan, utan med att få fram fordon. Hur många lastbilar har Volvo lyckats leverera trots ukrainskt kablagebortfall och att knappheten på ukrainskt neon till chiplasrar och ryskt palladium för chipplätering förvärrat halvledarbristen och även påverkat tillgången på katalysatorer? Och hur har det gått för bilsäkerhetsföretaget Autoliv med sina personbilskunder? Bägge ger besked på fredagen. Spana även in årets bästa storbolagsaktie, krigsmaterieltillverkaren Saab och en av de sämsta, det snabbväxande fertilitetsbolaget Vitrolife."
  },
  {
-   "datum": "25/10/2021",
-   "Text": "Avskyr måndagar. Ja, alla bolag utom specialstålbolaget SSAB. Det betyder fullt fokus på hur brant utför det kommer att gå från årets exceptionella rekordresultat. Analytikerna räknar med en knapp halvering nästa år och stålpriserna har redan böjt ned och energipriserna exploderat. Men de gillar ändå aktien stort. Och vad vill LKAB och nye ordföranden Lennart Evrell?"
+   "datum": "25/04/2022",
+   "Text": "Mjukstart på veckan. Få men spännande bolag inleder rapportveckan. Huvudnumret är gruvutrustaren Epiroc, med verkstans högsta vinstvärdering och ett börsvärde stort som nästan hela konkurrenten Sandviks. Högre metallpriser, trenderna med elektrifiering och mer av bolagets specialitet underjordsbrytning gynnar. Men i närtid handlar mycket om förlorad försäljning i Ryssland – högst i storverkstan – mot högtrycket för Epirocs lönsamma service- och reservdelsaffär när gruvorna kör så det ryker. Missa inte heller duellen i nätsparbolaget Avanza mellan blankarna och insynsköparna eller vad vd:n Rutger Arnhult hittat på i börsens tredje största fastighetsbolag Castellum."
  },
  {
-   "datum": "26/10/2021",
-   "Text": "Ta ny sats. Nu kommer de två verkstäder som analytikerna skruvat upp sina 2022-vinstprognoser mest för sedan den 31 juli, sencykliska Alfa Laval och SKF med nya kaptenen Richard Gustafsson. Det är också dagen vi får reda på hur rapportperiodens första spelbolag Betsson påverkats av företagets spektakulära vd- och ordförandekarusell. Bänka er även inför den pålitliga rapportunderhållaren Nent och de första stora konsultrapporterna från Afry och Evry, den senare med Tieto i förnamn. "
+   "datum": "26/04/2022",
+   "Text": "Tempohöjning. De tre verkstadsklassikerna Atlas Copco, Alfa Laval och SKF stämmer av sina utsikter, ”oförändrad”, ”högre” respektive ”tillväxt, men låg” och försöker sig på nya i leveransstökets och krigets skugga. EQT ges en ny möjlighet att tillväxtskrälla och bevisa att riskkapitalbolaget kan attrahera kapital och leverera avkastning även när räntorna stiger. Första skogsbolaget Billerud Korsnäs gläntar på vad de höga massa-, el- och fraktpriserna inneburit och hur USA-förvärvet går. Spana även in analytikerfavoriten och rapportrökaren Getinge, hur bra stålbolaget SSAB kan försvara fjolårets rekordvinst och tre tunga fastighetsbolag."
  },
  {
-   "datum": "27/10/2021",
-   "Text": "Bygg, nikotin och svikare. När låsjätten Assa Abloy, vitvarubolaget Electrolux och byggbolaget Peab presenterar sina siffror är byggkonjunkturen, råvarukostnaderna och förmågan att knuffa dem vidare till kunderna gemensamma nämnare. I ryggen har Assa Abloy sitt hittills största men ännu inte godkända förvärv av amerikanska HHI och trendbrottet med positiva rapport- och ledningsvibrationer senast. Sug även in Swedish Matchs nikotinstinna tillväxt, hotet om nya skatter och den applåderade avsnoppningen av cigarrerna. Se också upp för Fenix Outdoor, Kindred, Lundin Mining och Pandox som allt som oftast fallit på sina rapporter de senaste två åren. "
+   "datum": "27/04/2022",
+   "Text": "Rapportcirkus. Börsens elefanter – bankerna – äntrar manegen. Hur har SEB och Handelsbanken dansat runt i den turbulenta världen av krig (risk för framtida kreditförluster, lägre utlåning och mindre företagsaffärer), inflation och stigande räntor (fetare räntenetton) samt svaga och svängiga aktie- och valutamarknader (mer affärer, mer säkringsprodukter, lägre avgifter och uttag i fonderna)?Senast bröt det defensiva säkerhetsdjuret Assa Abloy sin trista rapportsvit med oväntat bra tillväxt och. Repris? Och sägs något nytt om när prishöjningarna ska biffa upp marginalen och HHI-köpet vara i hamn?  Andra attraktioner är de galopperande råvaruvinnarna Lundinbolagen Mining och Energy. Travar Telia fortfarande orent? Missa inte heller aktietorskarna – Ukrainatunga Medicover – och fastighetsbolaget och blankarfavoriten SBB."
  },
  {
-   "datum": "28/10/2021",
-   "Text": "Öppna dammluckor. Dagen som inte bara har flest storbolag, 16 stycken, som pockar på rapportuppmärksamhet utan också med några av börsens hetaste och högst värderade skapelser. Mätteknikbolaget Hexagon och det snabbväxande livecasinobolaget Evolution och brukar vara precisa och säkra bett i rapporttider. Fastighetsbolaget Sagax och Catena har feta substanspremier, de upphaussade serieförvärvarna Indutrade och Addtech samt polymerföretaget Nolato och medicinteknikbolaget Arjo är alla rekordvärderade och har mycket att leva upp till. Det är ett problem iskalla Ica-Gruppen och byggjätten Skanska gärna skulle ha. "
+   "datum": "28/04/2022",
+   "Text": "Helv…festen brakar loss. Värre, eller underbarare, än så här blir det inte. Den högst värderade banken Nordea, som har skruvat upp det mesta det senaste året ställs mot lägst värderade Swedbank. Och vem i speltrion Kindred som vinstvarnat, Betsson och jätten Evolution gör det bäst?Volvo Cars färska vd Jim Rowan lämnar sin jungfrurapport. Vad säger skotten om vägval, det spac-aktuella elbilsbolaget Polestar och komponent- och produktionsstrul?Kolla även in molnkommunikationsbolaget Sinch som tappat två tredjedelar av sitt värde sedan i höstas. Har aktien bottnat som analytikerna tror?Vad säger det första byggbolaget NCC om stigande materialpriser och cementbrist och 18 andra storbolag? Och finns det några tecken på att kostnadspressen i hygien- och medicinteknikbolaget Essity börjat avta? Puh."
  },
  {
-   "datum": "29/10/2021",
-   "Text": "Sista mastodontdagen. Fredagen har en spännande mix av folkfavoriten det dyra och spretiga fastighets- och aktiebygget SBB, analytikernas stabila gunstlingar skogsbolaget SCA och bevakningsjätten Securitas samt det högtflygande och förvärvsaktuella fertilitetsbolaget Vitrolife. Vi får också besked om fjolårets pandemi- och hållbarhetsvinnare Sweco efter tre rapportbesvikelser kan bryta sin negativa trend och hur Nordnets nordiska bredd klarat sig i racet mot Avanza svenska spets."
+   "datum": "29/04/2022",
+   "Text": "Glöm tidig fredagsöl. Njut i stället av mätteknik- och tillväxtbolaget Hexagon där kursbubblet visserligen brukar utebli, men vd:n Ola Rolléns ord ändå är väl värda att insupa. Räcker läkemedelsjätten Astra Zenecas siffror till mer hyllningar från placerare och analytiker? Lyckas de populära förvärvsfantomerna Latour, Lifco och Indutrade motivera sina höga värderingar? Dagen serverar även skogsbolaget SCA, som täljer guld på de höga råvarupriserna, och Electrolux, som med sin låga förädlingsgrad pressas hårt av dem och värderas lägst sedan 2011."
  },
  {
-   "datum": "02/11/2021",
+   "datum": "02/05/2022",
+   "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
+ },
+  {
+   "datum": "04/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "03/11/2021",
+   "datum": "05/05/2022",
+   "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
+ },
+  {
+   "datum": "06/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "04/11/2021",
+   "datum": "11/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "09/11/2021",
+   "datum": "12/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "10/11/2021",
+   "datum": "12/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "11/11/2021",
+   "datum": "17/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "12/11/2021",
+   "datum": "18/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  },
  {
-   "datum": "17/11/2021",
-   "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
- },
- {
-   "datum": "24/11/2021",
-   "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
- },
- {
-   "datum": "25/11/2021",
+   "datum": "24/05/2022",
    "Text": "Eftersläntrarna. Rapporterna droppar nu in mer sporadiskt. Men det finns kvar hel del intressant som börsens mest värdefulla bolag Astra Zeneca, de rekorddyra förvärvskanonerna Sinch och Nibe och det största fastighetsbolaget Balder. Det brukar också vara väl värt att höra vad investmentbolagstrion Latour, Bure och Lundbergs har att säga. Runda av rapportsäsongen med strålterapibolaget Elekta med sitt brutna räkenskapsår."
  }
 ]
